[gd_scene load_steps=8 format=2]

[ext_resource path="res://Input.gd" type="Script" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=3]
[ext_resource path="res://Room.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = 4.0
script = ExtResource( 2 )

[node name="Background" type="PanelContainer" parent="."]
anchor_left = 0.008
anchor_top = 0.013
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 288.808
margin_top = 120.2
margin_right = -252.0
margin_bottom = -80.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 475.0
margin_bottom = 392.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 455.0
margin_bottom = 372.0
custom_constants/separation = 20

[node name="OutputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_right = 435.0
margin_bottom = 272.0
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/OutputArea"]
margin_left = 7.0
margin_top = 7.0
margin_right = 428.0
margin_bottom = 265.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/OutputArea/Scroll"]
margin_right = 421.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 292.0
margin_right = 435.0
margin_bottom = 352.0
rect_min_size = Vector2( 40, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_left = 7.0
margin_top = 7.0
margin_right = 428.0
margin_bottom = 53.0

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_top = 16.0
margin_right = 16.0
margin_bottom = 30.0
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_left = 20.0
margin_right = 421.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
script = ExtResource( 1 )

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 3 )

[node name="RoomManager" type="Node" parent="."]

[node name="HouseRoom" parent="RoomManager" instance=ExtResource( 4 )]
anchor_left = 0.094
anchor_top = 0.093
anchor_right = 0.094
anchor_bottom = 0.093
margin_left = 247.744
margin_top = -39.8
margin_right = 652.744
margin_bottom = 60.2
room_name = "A Random Server"
room_description = "A random server that you do not recognize."

[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
